[package]
name = "rema"
version = "0.1.0"
authors = ["0jdxt <jytrn@protonmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_yaml = "0.8.12"
clap = "2.33.1"
dirs = "2.0.2"
shellexpand = "2.0.0"
lazy_static = "1.4.0"
ron = "0.5.1"
maplit = "1.0.2"
toml = "0.5.6"
git2 = "0.13.5"
failure = "0.1.8"
